--- a/.github/workflows/initial-pipeline.yml
+++ b/.github/workflows/initial-pipeline.yml
@@ -28,12 +28,14 @@ jobs:
       - run: echo "- Simulate and test the artifact"
 
   development:
+    environment: development
     needs: test-artifact
     runs-on: ubuntu-latest
     steps:
       - run: echo "- Auto-deploy the artifact to the development environment"
         
   staging:
+    environment: staging
     needs: development
     runs-on: ubuntu-latest
     steps:
@@ -43,12 +45,14 @@ jobs:
           echo "- Auto-deploy the artifact to the staging environment"
         
   test-staging:
+    environment: staging
     needs: staging
     runs-on: ubuntu-latest
     steps:
       - run: echo "- Test the staging environment"
         
   production:
+    environment: production
     needs: test-staging
     runs-on: ubuntu-latest
     steps:
@@ -59,6 +63,7 @@ jobs:
           echo "- Deploy the artifact to the production environment"
 
   test-production:
+    environment: production
     needs: production
     runs-on: ubuntu-latest
     steps:
